--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=5000
-MONGO_URI= mongodb+srv://<username>:<password>@cluster0.mongodb.net/<dbname>?retryWrites=true&w=majority
+DB_USERNAME=postgres
+DB_PASSWORD=[POSTGRESQL-PASSWORD]
+DB_NAME=auth
+DB_HOST=127.0.0.1
 JWT_SECRET= [YOUR-JWT-SECRET]
 # Nodemailer Email Configuration
 EMAIL_USER=anais.stamm5@ethereal.email
